--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ nav ul li a {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url('background-image.jpg'); /* Add your image */
+    background-image: url('/images/philly_skyline.jpg'); /* Add your image */
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
