--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ nav ul li a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url('background-image.jpg'); /* Add your image */
+    background-image: url('philly_skyline.jpg'); /* Add your image */
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
