--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ nav ul li a:hover {
     color: #dddddd;
     max-width: 800px;
     margin: 0 auto;
-    text-align: center;
+    text-align: left;
 }
 
 /* Projects Section */
