--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,14 @@ nav ul li a {
 .section p, .section ul {
     margin: 1em 0;
 }
+.menu-list {
+    list-style-type: none;
+    padding: 0;
+    font-size: 1.2em;
+}
+.menu-list li {
+    margin: 0.5em 0;
+}
 iframe {
     margin-top: 1em;
     border: none;
